add get registrations service
